# Rust-JTQ

./: Cargo.toml  README.md  Rocket.toml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2022-07-15-942_create_visitor_table/: down.sql  up.sql
src/: main.rs  schema.rs
