[package]
name = "rust-jtq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.4"
diesel = { version = "1.4.8", features = ["r2d2", "time", "numeric","num-integer", "chrono", "postgres"] }
diesel-derive-enum = {version = "1.1.2", features=["postgres"]}
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
csrf = "0.3.0"
data-encoding = "2.1.1"
time = "0.1"
bcrypt = "0.13"
